k8s-project/yolo5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
  namespace: k8s-youssefs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yolo
  template:
    metadata:
      labels:
        app: yolo
    spec:
      containers:
        - name: yolo
          image: youssefcarmi92/k8s_yolo5:latest
          ports:
            - containerPort: 8081
          command: ["python3"]
          args: ["app.py"]
