k8s-project/polybot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: k8s-youssefs
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
