k8s-project/yolo5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo5-service
  namespace: k8s-youssefs
spec:
  selector:
    app: yolo
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
