k8s-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youssefs-ingress
  namespace: k8s-youssefs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/secure-backends: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: youssefs.atech-bot.click
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443
  tls:
    - hosts:
        - youssefs.atech-bot.click
      secretName: youssefs-tls
